Work around black flashing in ui::Compositor

The root cause for this bug is crbug.com/804430, where we optimize away
required quads because we aren't aware of a reshape.

The fix for that bug will be subtle, and this needs merges, so just lie
and say that we changed the UI color space even if it's still always
just sRGB.

Bug: 796828
Change-Id: I23929eb92a780020f67f003985823b01a77901e3
Reviewed-on: https://chromium-review.googlesource.com/879395
Reviewed-by: weiliangc <weiliangc@chromium.org>
Commit-Queue: ccameron <ccameron@chromium.org>
Cr-Commit-Position: refs/heads/master@{#531470}
Former-commit-id: 4f96f1f0fbf78ea9b6d6ccb0e9f6ec995497a0c3